# datadog-agent

./: .gitattributes  .gitlab-ci.yml  .golangci.yml  README.md  config.yaml  go.mod  go.sum  go.work.sum  release.json
.circleci/: config.yml
.github/: CODEOWNERS
.github/actions/install-dda/: action.yml
.github/workflows/: buildimages-update.yml  cws-btfhub-sync.yml  serverless-integration.yml  update_dependencies.yml
.gitlab/binary_build/: cluster_agent.yml  cluster_agent_cloudfoundry.yml  cws_instrumentation.yml  include.yml  linux.yml  otel_agent.yml  serverless.yml  system_probe.yml  windows.yml
.gitlab/container_build/: docker_linux.yml  include.yml
.gitlab/deploy_packages/: cluster_agent_cloudfoundry.yml  deploy_common.yml  include.yml  nix.yml
.gitlab/dev_container_deploy/: docker_linux.yml  include.yml
.gitlab/e2e/: e2e.yml
.gitlab/internal_image_deploy/: internal_image_deploy.yml
.gitlab/kernel_matrix_testing/: system_probe.yml
.gitlab/lint/: include.yml  windows.yml
.gitlab/notify/: notify.yml
.gitlab/package_build/: include.yml  linux.yml
.gitlab/packaging/: deb.yml  include.yml  rpm.yml
.gitlab/source_test/: include.yml  linux.yml  notify.yml  windows.yml
bazel/packaging/: BUILD.bazel
bazel/packaging/init-scripts/upstart/: BUILD.bazel  upstart_debian.conf  upstart_debian.process.conf
cmd/agent/agentslogsanalyze/: command.go
cmd/process-agent/command/: main_common.go
cmd/serverless/: dependencies_linux_amd64.txt  dependencies_linux_arm64.txt  main.go
comp/core/ipc/: go.mod
comp/dogstatsd/server/: server.go
comp/otelcol/logsagentpipeline/: go.mod
comp/otelcol/otlp/: collector.go  config.go  config_test.go
internal/tools/: go.mod  go.sum
omnibus/config/projects/: agent.rb
omnibus/config/software/: datadog-agent.rb
pkg/collector/worker/: worker.go
pkg/config/remote/: go.mod
pkg/config/setup/: config.go  config_windows.go  otlp.go  system_probe.go
pkg/dynamicinstrumentation/: di.go
pkg/dynamicinstrumentation/codegen/: codegen.go
pkg/dynamicinstrumentation/diconfig/: file_config_manager.go  mem_config_manager.go
pkg/dynamicinstrumentation/ebpf/: ebpf.go
pkg/ebpf/attach/: attach.go  link.go  socket.go
pkg/ebpf/loader/: bypass.go  collection.go  tail_call.go
pkg/ebpf/names/: names.go
pkg/ebpf/uprobes/: attacher.go
pkg/gpu/: probe.go  stats_test.go  stream.go  stream_collection.go  stream_collection_test.go  stream_test.go
pkg/gpu/config/: config.go
pkg/gpu/testutil/: samplebins.go
pkg/logs/client/: go.mod
pkg/logs/metrics/: capacity_monitor.go  comp_monitor.go  go.mod  go.sum  pipeline_monitor.go  utilization_monitor.go
pkg/logs/pipeline/: go.mod  pipeline.go
pkg/logs/processor/: go.mod  go.sum  (+1 more)
tasks/: agent.py  build_tags.py  cluster_agent.py  github_tasks.py  gotest.py  invoke_unit_tests.py  msi.py  omnibus.py  pipeline.py  security_agent.py  system_probe.py
tasks/winbuildscripts/: lint.ps1  unittests.ps1
test/new-e2e/: go.mod  go.sum
test/otel/: go.mod
tools/EdgeTxStatsd/: main.go
(+125 files in other folders)
